corrected error in Jinjector.config and changed the example file

--- a/testJinjector.html
+++ b/testJinjector.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="Jinjector.js" data-configuration-file="Jin.jon"></script>
+		<script src="Jinjector.js"></script>
 	</head>
 	<body>
 		<h1>Jinjector test</h1>
