--- a/example/testJinjector.html
+++ b/example/testJinjector.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="Jinjector.js"></script>
+		<script src="../Jinjector.js" data-configuration-file="../Jinjector.config.json"></script>
 		<script>
 			var load_css_1;
 			var load_script_1
@@ -12,6 +12,6 @@
 		<button onclick="load_css_1 = true">Load CSS 1</button>
 		<button onclick="load_script_1 = true">Load Script 1</button>
 		<a href="https://github.com/vneri/Jinjector">Jinjector on GitHub</a>
-		<code>&lt;script src="Jinjector.hs"&gt;&lt;/script&gt;</code>
+		<code>&lt;script src="Jinjector.js"&gt;&lt;/script&gt;</code>
 	</body>
 </html>
